--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Mina&display=swap');
-
+*{
+    padding: 0;
+    margin: 0;
+}
 .header{
     width: 100vw;
 }
@@ -27,27 +30,58 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 .main{
-    width: 100vw;
-    height: 93.70vh;
     background-color: #1b232a;
     color: white;
     display: flex;
-    justify-content: center;
-    text-align: start;
+    align-items: center;
 }
 .main .row{
-    height: 10vh;
-    display: flex;
-    justify-content: center;
-    text-align: start;
+    height: 80vh;
+}
+
+.main .main-content{
+    justify-content: flex;
+    align-self: center;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: bold;
+    font-size: 40px;
+}
+
+.main-hero img{
+    position: fixed;
+    right: 0;
+    bottom: 20vh;
+    width: 33rem;
+}
+
+@media (max-width:1024px) {
+    .main .main-content{
+        font-size: 30px;
+    }
+    .main-hero img{
+        width: 30rem;
+    }
+}
+@media (max-width:992px) {
+    .main .main-content{
+        font-size: 25px;
+    }
+    .main-hero img{
+        width: 25rem;
+    }
+}
+@media (max-width:768px) {
+    .main .main-content{
+        font-size: 20px;
+    }
+    .main-hero img{
+        width: 22rem;
+    }
 }
 
 
 @media (max-width:350px) {
     .navbar-brand .content{
         display: none;
-    }
-    .main{
-        height: 93.9vh;
     }
 }
