--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@
         width: 25rem;
     }
 }
-@media (max-width:768px) {
+@media (max-width:768px){
     .main .main-content{
         font-size: 20px;
     }
@@ -78,7 +78,20 @@
         width: 22rem;
     }
 }
-
+/* and (max-height:640px) */
+@media (max-width:500px) {
+    .main .main-content{
+        font-size: 15px;
+    }
+    .main-hero img{
+        width: 16rem;
+    }
+}
+@media (max-height:600px) {
+    .main-hero img{
+        width: 13rem;
+    }
+}
 
 @media (max-width:350px) {
     .navbar-brand .content{
