--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@
     color: white;
     display: flex;
     align-items: center;
+    margin-top: 56px;
 }
 
 
@@ -46,12 +47,14 @@
 }
 
 .main .row{
-    height: 100vh;
+    height: calc(100vh - 56px);
+}
+.main .main-hero{
     background-image: url("./assets/hero.svg");
     background-repeat: no-repeat;
     background-position: bottom;
     background-position-x: right;
-    background-size: auto,auto;
+    background-size: contain;
 }
 
 @media (max-width:1024px) {
@@ -65,28 +68,28 @@
     }
 }
 @media (max-width:768px){
-    .main .row{
-        background-size: 25rem;
-    }
+
     .main .main-content{
         font-size: 20px;
     }
 }
-/* and (max-height:640px) */
+
+
+
 @media (max-width:500px) {
-    .main .row{
-        background-size: 23rem;
-    }
+
     .main .main-content{
         font-size: 15px;
     }
 }
-@media (max-height:600px) {
 
-}
 
-@media (max-width:350px) {
+@media (max-width:350px){
     .navbar-brand .content{
         display: none;
     }
+    .main .row{
+        height: calc(100vh - 54px);
+    }
+
 }
