--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Mina&display=swap');
+@font-face {
+    font-family: 'tripleta';
+    src: url(fonts/TRIPLETA-ExtraBold.ttf);
+}
 *{
     padding: 0;
     margin: 0;
@@ -47,7 +51,7 @@
 }
 
 .main .row{
-    height: calc(100vh - 56px);
+    height: calc(90vh - 56px);
 }
 .main .main-hero{
     background-image: url("./assets/hero.svg");
@@ -56,6 +60,38 @@
     background-position-x: right;
     background-size: contain;
 }
+.heading{
+    text-align: center;
+    color: #51aeff;
+    font-size: 'tripleta';
+    font-size: 2.5rem;
+    font-weight: bolder;
+}
+.section-padding{
+    padding:60px 0;
+    }
+    .brand-carousel {
+    background: transparent;
+    }
+  /*  .owl-dots {
+    text-align: center;
+    margin-top: 4%;
+    }
+    .owl-dot {
+    display: inline-block;
+    height: 15px !important;
+    width: 15px !important;
+    background-color: #999898 !important;
+    opacity: 0.8;
+    border-radius: 50%;
+    margin: 0 5px;
+    }
+    .owl-dot.active {
+    background-color: rgb(255, 255, 255) !important;
+    }*/
+    .single-logo img{
+      height: 90px;
+    }
 
 @media (max-width:1024px) {
     .main .main-content{
@@ -81,6 +117,9 @@
     .main .main-content{
         font-size: 15px;
     }
+    .heading{
+        font-size: 2rem;
+    }
 }
 
 
@@ -89,7 +128,7 @@
         display: none;
     }
     .main .row{
-        height: calc(100vh - 54px);
+        height: calc(90vh - 54px);
     }
 
 }
