--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@
 }
 
 .main .row{
-    height: calc(90vh - 56px);
+    height: calc(100vh - 56px);
 }
 .main .main-hero{
     background-image: url("./assets/hero.svg");
@@ -67,6 +67,12 @@
     font-size: 2.5rem;
     font-weight: bolder;
 }
+
+
+
+
+    /*partners*/
+    
 .section-padding{
     padding:60px 0;
     }
@@ -93,6 +99,312 @@
       height: 90px;
     }
 
+    .ocean {
+        height: 80px; /* change the height of the waves here */
+        width: 100%;
+        position: absolute;
+        overflow-x: hidden;
+      }
+      
+      .wave {
+        background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 800 88.7'%3E%3Cpath d='M800 56.9c-155.5 0-204.9-50-405.5-49.9-200 0-250 49.9-394.5 49.9v31.8h800v-.2-31.6z' fill='%2351AEFF'/%3E%3C/svg%3E");
+        position: absolute;
+        width: 200%;
+        height: 100%;
+        animation: wave 10s -3s linear infinite;
+        transform: translate3d(0, 0, 0);
+        opacity: 0.5;
+      }
+      
+      .wave:nth-of-type(2) {
+        background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 800 88.7'%3E%3Cpath d='M800 56.9c-155.5 0-204.9-50-405.5-49.9-200 0-250 49.9-394.5 49.9v31.8h800v-.2-31.6z' fill='%2351AEFF'/%3E%3C/svg%3E");
+        animation: wave 18s linear reverse infinite;
+        opacity: 0.8;
+        height: 80%;
+        bottom: 0;
+      }
+      
+      .wave:nth-of-type(3) {
+        background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 800 88.7'%3E%3Cpath d='M800 56.9c-155.5 0-204.9-50-405.5-49.9-200 0-250 49.9-394.5 49.9v31.8h800v-.2-31.6z' fill='%231B232A'/%3E%3C/svg%3E");
+        bottom: 0;
+        height: 50%;
+        animation: wave 20s -1s linear infinite;
+        opacity: 1;
+      }
+      
+      @keyframes wave {
+          0% {transform: translateX(0);}
+          50% {transform: translateX(-25%);}
+          100% {transform: translateX(-50%);}
+      }
+
+    /*highlights*/
+
+    .highlights{
+        background: #1b232a;
+        overflow: hidden;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-self: center;
+    }
+    .highlights .card{
+        margin: 10px auto;
+        width: 18rem;
+        height: 22rem;
+        border-radius: 23px;
+    }
+    .highlights .card1{
+        background: linear-gradient(154.96deg, #51AEFF 28.57%, #4DFFF0 96.22%);
+        box-shadow: 2px 10px 17px 3px rgba(0, 0, 0, 0.25);
+        border-radius: 23px;
+    }
+    .highlights .card2{
+        background: #4DFFF0;
+        box-shadow: 2px 10px 17px 3px rgba(0, 0, 0, 0.25);
+        border-radius: 23px;
+    }
+    .highlights .card-body{
+
+        display: flex;
+        align-items: center;
+        justify-self: center;
+        flex-direction: column;
+        text-align: center;
+    }
+    .highlights .card .fa{
+        font-size: 4.5rem;
+        margin-top: 30px;
+    }
+    .highlights .card p{
+        font-size: 3rem;
+        font-weight: bolder;
+        margin: 0;
+    }
+
+    /*about*/
+    .about-img{
+        display: grid;
+        justify-items: center;
+        align-items: center;
+    }
+    .about-content{
+        font-size: 25px;
+        text-align: left;
+    }
+   
+    /*services*/
+    .services{
+        background: linear-gradient(360deg, #FFCE31 -0.95%, #000000 -0.94%, #1B232A 93.27%);
+        overflow: hidden;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-self: center;
+    }
+    .services .card{
+        margin: 10px auto;
+        width: 14.4rem;
+        height: 17.64rem;
+        border-radius: 23px;
+    }
+    .services .card1{
+        background: linear-gradient(137.46deg, #FFE600 0%, #8D8642 89.58%);
+        
+        border-radius: 14px;
+
+    }
+    .services .card1:hover{
+        box-shadow: 0px 4px 77px 2px #FFE602;
+    }
+    .services .card2{
+        background: linear-gradient(138.51deg, #52FFEE 8.8%, #00413B 100%);
+        border-radius: 14px;
+    }
+    .services .card2:hover{
+        box-shadow: 0px 0px 43px 7px #52FFEE;
+
+    }
+    .services .card3{
+        background: linear-gradient(136.49deg, #2DCDFF 4.17%, #040501 138.06%, #000000 138.07%);
+        border-radius: 14px;
+    }
+    .services .card3:hover{
+        box-shadow: 0px 0px 44px 13px #24D8FF;
+
+    }
+    .services .card4{
+        background: linear-gradient(137.46deg, #51AEFF 0%, #376B99 89.58%);
+        border-radius: 14px;
+        
+    }
+    .services .card4:hover{
+        box-shadow: 0px 4px 77px 2px #51AEFF;
+
+    }
+    .services .card5{
+        background: linear-gradient(137.46deg, #EE7671 0%, #BB5E5A 89.58%);
+        border-radius: 14px;
+    }
+    .services .card5:hover{
+        box-shadow: 0px 4px 77px 2px #EE7671;
+
+    }
+    .services .card6{
+        background: linear-gradient(137.46deg, #4DD885 0%, #387C53 86.98%);
+        border-radius: 14px;
+    }
+    .services .card6:hover{
+        box-shadow: 0px 4px 77px 2px #4DD885;
+
+    }
+    .services .card-body{
+        
+        display: flex;
+        align-items: center;
+        justify-self: center;
+        flex-direction: column;
+        text-align: center;
+    }
+    .services .card .fa{
+        font-size: 4.5rem;
+        margin-top: 30px;
+    }
+    .services .card p{
+        font-size: 1.5rem;
+        font-weight: bolder;
+        margin: 10px;
+    }
+
+    /*review*/
+
+
+
+    /*contact*/
+    .contact {
+        background: linear-gradient(180deg, #1B232A 0%, #161616 100%);
+      }
+    
+    
+      
+    
+      .form-control{
+        width: 40rem !important;
+        color: white;
+        transition: none;
+        border: none;
+        border-radius: 37px;
+        font-family: 'Turret Road', cursive;
+    
+        border: 2px solid white;
+      }
+      input[placeholder], [placeholder], *[placeholder] {
+        color: black;
+        background-color: #c4c4c4;
+        display: flex;
+        justify-content: center;
+        text-align: center;
+        border-radius: 14px;
+        
+      }
+      ::placeholder{
+        color: black !important;
+        opacity: .8 !important;
+      }
+      .form-control:focus{
+        background: #c4c4c4;
+        color: black;
+      }
+      .input-group{
+        width: 40rem;
+      }
+      .input-group:not(.has-validation) > :not(:last-child):not(.dropdown-toggle):not(.dropdown-menu), .input-group:not(.has-validation) > .dropdown-toggle:nth-last-child(n+3) {
+        border-top-right-radius: 14px;
+        border-bottom-right-radius: 14px;
+      }
+    
+      #validationCustomUsername-error{
+        width: 100%;
+      }
+      #submit-form{
+        color: red;
+      
+        justify-content: center;
+      }
+      #submit-form .row .input-group{
+        padding: 0;
+      }
+      .button .btn-primary{
+        background-color: #51aeff;
+        border-radius: 14px;
+        width: 150px;
+        font-family: 'Turret Road', cursive;
+    
+      }
+      .button .btn-primary:hover{
+        background-color: #86b9e6;
+        color: black;
+      }
+      .mail-phone{
+        color: white;
+        font-family: 'Turret Road', cursive;
+      }
+      .mail-phone h5{
+    
+        font-weight: bold;
+      }
+      .mail-phone .fa {
+        display: initial !important;
+        color: white;
+      }
+      
+      .mail-phone a {
+        color: white;
+        text-decoration: none;
+      }
+      .mail-phone a:hover{
+        color: silver;
+      }
+    
+      .icons a{
+        text-decoration: none;
+      }
+      .icons .btn-primary{
+        background-color: rgb(255, 255, 255);
+        color: #000;
+        border: 2px solid white;
+        border-radius: 50%;
+        font-family: 'Turret Road', cursive;
+    
+      }
+      .icons .btn-primary:hover{
+        background-color: black;
+        border: 2px solid black;
+        border-radius: 50%;
+        color: white;
+      }
+    
+
+      /*footer*/
+      footer{
+          background-color: black;
+          color: white;
+      }
+      .copyright {
+        align-self: center;
+        font-family: 'Turret Road', cursive;
+    
+      }
+      .copy a {
+        text-decoration: none;
+        color: white;
+      }
+      .copy a:hover {
+        color: wheat;
+      }
+    
+
+
 @media (max-width:1024px) {
     .main .main-content{
         font-size: 30px;
@@ -108,6 +420,10 @@
     .main .main-content{
         font-size: 20px;
     }
+    .about-content{
+        font-size: 20px;
+        padding: 0px 5px;
+    }
 }
 
 
@@ -119,6 +435,10 @@
     }
     .heading{
         font-size: 2rem;
+    }
+    .about-content{
+        font-size: 20px;
+        text-align: center;
     }
 }
 
