--- a/amastyle.css
+++ b/amastyle.css
@@ -1,48 +1,89 @@
-*{
-    padding: 0;
-    margin: 0;
-    scroll-behavior: smooth;
+* {
+  padding: 0;
+  margin: 0;
+  scroll-behavior: smooth;
 }
-::-webkit-scrollbar{
+::-webkit-scrollbar {
   display: none;
 }
-.header{
-    width: 100vw;
+.header {
+  width: 100vw;
 }
-.bg-light{
-    background-color: #1b232a !important;
+.bg-light {
+  background-color: #1b232a !important;
 }
-.navbar{
-    font-family: 'Mina', sans-serif;
-    font-weight: bold;
-    display: flex;
-    justify-content: center;
+.navbar {
+  font-family: "Mina", sans-serif;
+  font-weight: bold;
+  display: flex;
+  justify-content: center;
 }
-.navbar-brand{
-    display: flex;
-    justify-content: center;
-    text-align: center;
+.navbar-brand {
+  display: flex;
+  justify-content: center;
+  text-align: center;
 }
 
 /*latest*/
-.latest{
-    margin-top: 90px !important;
-    background: linear-gradient(181.1deg, #1B232A 0.94%, #2E5373 229.57%, #51AEFF 664.01%);
-    border-radius: 23px;
-    height: 20rem;
+.latest {
+  margin-top: 90px !important;
+  background: linear-gradient(
+    181.1deg,
+    #1b232a 0.94%,
+    #2e5373 229.57%,
+    #51aeff 664.01%
+  );
+  border-radius: 23px;
+  display: flex;
+  color: white;
 }
-.row,image{
+.latest .row{
+    height: 25rem;
     width: 100%;
-    height: 100%;
+}
+.image,.content{
+    width: 50%;
+
     display: flex;
-    justify-self: center;
+    justify-content: center;
     align-self: center;
+    flex-direction: column;
+}
+.image img{
+    width: 80%;
+    height: 75%;
+}
+.image{
+    align-items: center;
+}
+.content{
+    margin-right: auto;
 }
 
-.older{
-    margin-top: 20px;
-    background: #1b232a;
-    border-radius: 23px;
-    height: 10rem;
-    color: white;
+.older {
+  margin-top: 20px;
+  background: #1b232a;
+  border-radius: 23px;
+  color: white;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  height: fit-content;
+  text-align: start;
 }
+.older img{
+    height: 10rem;
+    width: 10rem;
+}
+.old-img{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.old-content{
+    width: 100%;
+    margin-left: 10%;
+    margin-top: 10px;
+}
+
